# note

./: Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
core/: Cargo.toml  build.rs
core/capabilities/: default.json
core/config/: default.toml
core/src/: lib.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: common.rs  config.rs  error.rs  lib.rs  logging.rs  models.rs
crates/common/src/models/: note_tags.rs  notebooks.rs  notes.rs  tags.rs
crates/db/: Cargo.toml
crates/db/src/: init.rs  lib.rs  migration.rs  path.rs
crates/db/src/migration/: m20260626_000001_create_notebooks.rs  m20260626_000002_create_tags.rs  m20260626_000003_create_notes.rs  m20260626_000004_create_note_tags.rs  m20260626_000005_create_notes_fts.rs  m20260628_000001_create_note_tags.rs  m20260628_000001_create_notebooks.rs  m20260628_000001_create_notes.rs  m20260628_000001_create_notes_fts.rs  m20260628_000001_create_tags.rs  mod.rs
crates/db/tests/: migration_integration.rs
crates/notebooks/: Cargo.toml
crates/notebooks/src/: handler.rs  lib.rs  service.rs
crates/notes/: Cargo.toml
crates/notes/src/: lib.rs
crates/notes/src/notes/: handler.rs  service.rs
crates/notes/tests/: search_fts_test.rs
crates/tags/: Cargo.toml
crates/tags/src/: lib.rs
crates/tags/src/note_tags/: handler.rs  service.rs
crates/tags/src/tags/: handler.rs  service.rs
docs/superpowers/plans/: 2026-06-26-sqlite-fts5.md
docs/superpowers/specs/: 2026-06-26-sqlite-fts5-design.md
src/: App.vue  deepseek_html_20260619_84591e.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: default.toml
src-tauri/src/: common.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  note_tags.rs  notebooks.rs  notes.rs  tags.rs
src-tauri/src/note_tags/: handler.rs  service.rs
src-tauri/src/notebooks/: handler.rs  models.rs  service.rs
src-tauri/src/notes/: handler.rs  models.rs  service.rs
src-tauri/src/tags/: handler.rs  models.rs  service.rs
src/api/: index.ts
src/api/modules/: note-tag.ts  note.ts  notebook.ts  tag.ts
src/assets/styles/: global.css
src/components/: AppDialog.vue  AppSidebar.vue  AppToast.vue  EditorPanel.vue  EditorTags.vue  MilkdownEditor.vue  NoteItem.vue  NoteListPanel.vue  NotebookList.vue  SearchBar.vue  TagChips.vue
src/composables/: useAutoSave.ts  useDialog.ts  useTheme.ts
src/layouts/: DefaultLayout.vue
src/router/: index.ts
src/stores/: app.ts  note.ts  notebook.ts  tag.ts
src/types/: api.ts  note-tag.ts  note.ts  notebook.ts  tag.ts
src/utils/: format.ts  storage.ts
src/views/home/: index.vue
