[workspace]
members = ["crates/*", "core"]
resolver = "3"

[workspace.package]
version = "0.1.0"
description = "A Tauri App"
authors = ["rf"]
edition = "2021"

[workspace.dependencies]
tauri = { version = "2" }
tauri-plugin-opener = "2"

# 序列化
serde = { version = "1" }
serde_json = "1"

#数据库
sea-orm = { version = "2.0.0-rc.41" }

thiserror = "2.0.18"
config = { version = "0.15.23" }

# 日志
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23" }
tracing-appender = "0.2.5"

time = "0.3.47"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }

common = { path = "crates/common" }
db = { path = "crates/db" }
notebooks = { path = "crates/notebooks" }
notes = { path = "crates/notes" }
tags = { path = "crates/tags" }

# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
