[package]
name = "core"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

common = { workspace = true }
db = { workspace = true }
notes = { workspace = true }
tags = { workspace = true }
notebooks = { workspace = true }

# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
