[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

#数据库
sea-orm = { workspace = true, features = ["macros", "with-time"] }

thiserror = { workspace = true }
config = { workspace = true, features = ["toml"] }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "time"] }
tracing-appender = { workspace = true }

time = { workspace = true }
