[package]
name = "notes"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { workspace = true }
sea-orm = { workspace = true }
time = { workspace = true }

common = { workspace = true }
tags = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio"] }
sea-orm-migration = { workspace = true }
db = { workspace = true }
